fix(helm): k8s resource names

--- a/chart/chaoskube/templates/deployment.yaml
+++ b/chart/chaoskube/templates/deployment.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Chart.Name }}
+  name: {{ include "chaoskube.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "chaoskube.labels" . | nindent 4 }}
