--- a/chart/chaoskube/templates/clusterrole.yaml
+++ b/chart/chaoskube/templates/clusterrole.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ .Chart.Name }}
+  name: {{ include "chaoskube.fullname" . }}
 rules:
   - apiGroups: [""]
     resources: ["pods"]
