--- a/chart/chaoskube/templates/clusterrolebinding.yaml
+++ b/chart/chaoskube/templates/clusterrolebinding.yaml
@@ -2,11 +2,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Chart.Name }}
+  name: {{ include "chaoskube.fullname" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ .Chart.Name }}
+  name: {{ include "chaoskube.fullname" . }}
 subjects:
 - kind: ServiceAccount
   name: {{ include "chaoskube.serviceAccountName" . }}
