--- a/.github/workflows/helm.yml
+++ b/.github/workflows/helm.yml
@@ -5,9 +5,28 @@ on:
     branches:
       - master
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      chart: ${{ steps.filter.outputs.chart }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          filters: |
+            chart:
+              - 'chart/chaoskube/Chart.yaml'
+              - 'chart/chaoskube/**/*'
   chart:
     name: release chart
     runs-on: ubuntu-latest
+    needs:
+      - changes
+    if: |
+      needs.changes.outputs.chart == 'true'
     steps:
       - name: Checkout master
         uses: actions/checkout@v2
